Fix minor layout issue

--- a/templates/resources/css/main.css
+++ b/templates/resources/css/main.css
@@ -242,6 +242,10 @@ main {
     overflow-wrap: break-word;
 }
 
+#content {
+    width: 100%;
+}
+
 @media screen and (min-width: 64em) {
     main {
         display: flex;
